2009-09-26  Timur Zhamakeev  <ztimur@gmail.com>

	* ky.po:
	* LINGUAS: Added Kyrgyz translation

2009-04-20  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2009-04-19  Mario Blättermann  <mariobl@gnome.org>

	* de.po: Updated German translation

2009-04-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Benjamin Valero.

2009-04-06  Jordi Mas <jmas@softcatala.org>

	* ca.po: Updated Catalan translation

2009-04-04  Petr Kovar  <pknbe@volny.cz>

	* cs.po: Updated Czech translation by Jiri Eischmann.

2009-03-30  Dziumanenko Maxim <dziumanenko@gmail.com>

	* uk.po: Updated Ukrainian translation by Oleksandr Kovalenko.

2009-03-29  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated Portuguese translation by António Lima
	<amrlima@gmail.com>.

2009-03-25  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB.po: Add a missing translation.

2009-03-25  Philip Withnall  <philip@tecnocode.co.uk>

	* en_GB.po: Updated British English translation by Jen Ockwell
	<jenfraggleubuntu@gmail.com>.

2009-03-24  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2009-03-20  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* eu.po: Updated Basque translation.

2009-03-19 Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Benjamin Valero.

2009-03-13  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.
	
2009-03-12  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* LINGUAS: Add back 'eu' (Basque) entry.

2009-03-10  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

2009-03-09  Jonh Wendell <jwendell@gnome.org>

	* pt_BR.po: Updated Brazilian Portuguese translation by Daniel S. Koda.

2009-03-08  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* POTFILES.in: Updated.

2009-03-07 Jorge Gonzalez  <jorgegonz@svn.gnome.org>
