@@ -33,6 +33,8 @@ config.h.in~
 config.log
 config.status
 config.sub
+config.rpath
+ABOUT-NLS
 INSTALL
 aclocal.m4
 autom4te.cache/
@@ -44,7 +46,18 @@ ltmain.sh
 missing
 po/.intltool-merge-cache
 po/Makefile.in.in
+po/Makevars.template
 po/stamp-it
+po/Rules-quot
+po/remove-potcdate.sed
+po/*.pot
+po/boldquot.sed
+po/en@boldquot.header
+po/en@quot.header
+po/insert-header.sin
+po/quot.sed
+po/remove-potcdate.sin
+po/stamp-po
 src/AssemblyInfo.cs
 src/Clients/Booter/banshee
 src/Clients/Booter/banshee.darwin
