@@ -2,8 +2,8 @@
 <audio-profiles>
   <profiles>
     <profile id="novell-aac">
-      <_name>AAC (Novell Encoder)</_name>
-      <_description>Designed to be the successor of the MP3 format, AAC generally achieves better sound quality than MP3 at many bit rates.</_description>
+      <name>AAC (Novell Encoder)</name>
+      <description>Designed to be the successor of the MP3 format, AAC generally achieves better sound quality than MP3 at many bit rates.</description>
       <output-file-extension>m4a</output-file-extension>
       <mimetype>audio/aac</mimetype>
       <mimetype>audio/mp4</mimetype>
@@ -27,7 +27,7 @@
         ]]>
         </process>
         <variable id="bitrate">
-          <_name>Bitrate</_name>
+          <name>Bitrate</name>
           <control-type>combo</control-type>
           <default-value>128</default-value>
           <possible-values>
@@ -45,28 +45,28 @@
           </possible-values>
         </variable>
         <variable id="container">
-          <_name>Container</_name>
+          <name>Container</name>
           <output-file-extension>3gp</output-file-extension>
           <control-type>combo</control-type>
           <default-value>novellqtmux</default-value>
           <possible-values>
-            <_value value="novellmp4mux">MPEG-4 ISO</_value>
-            <_value value="novellqtmux">MPEG-4 QuickTime</_value>
-            <_value value="novellgppmux">3GPP</_value>
+            <value value="novellmp4mux">MPEG-4 ISO</value>
+            <value value="novellqtmux">MPEG-4 QuickTime</value>
+            <value value="novellgppmux">3GPP</value>
           </possible-values>
         </variable>
         <variable id="profile">
-          <_name>Profile</_name>
+          <name>Profile</name>
           <control-type>combo</control-type>
           <default-value>2</default-value>
           <possible-values>
-            <_value value="2">Low Complexity</_value>
-            <_value value="4">Long Term Prediction</_value>
+            <value value="2">Low Complexity</value>
+            <value value="4">Long Term Prediction</value>
           </possible-values>
           <advanced/>
         </variable>
         <variable id="outputformat">
-          <_name>Output Format</_name>
+          <name>Output Format</name>
           <control-type>combo</control-type>
           <default-value>0</default-value>
           <possible-values>
