@@ -2,8 +2,8 @@
 <audio-profiles>
   <profiles>
     <profile id="wma-asf">
-      <_name>Windows Media Audio</_name>
-      <_description>A proprietary lossy audio format with high quality output at a lower file size than MP3. A 96 kbps WMA is equivalent to a 128 kbps MP3.</_description>
+      <name>Windows Media Audio</name>
+      <description>A proprietary lossy audio format with high quality output at a lower file size than MP3. A 96 kbps WMA is equivalent to a 128 kbps MP3.</description>
       <output-file-extension>wma</output-file-extension>
       <mimetype>audio/x-ms-wma</mimetype>
       <mimetype>taglib/wma</mimetype>
@@ -21,12 +21,12 @@
         ]]>
         </process>
         <variable id="vbr" enables="quality" disables="bitrate">
-          <_name>Use a variable bitrate</_name>
+          <name>Use a variable bitrate</name>
           <control-type>check</control-type>
           <default-value>0</default-value>
         </variable>
         <variable id="bitrate">
-          <_name>Bitrate</_name>
+          <name>Bitrate</name>
           <control-type>combo</control-type>
           <default-value>64</default-value>
           <possible-values>
@@ -39,12 +39,12 @@
           </possible-values>
         </variable>
         <variable id="quality">
-          <_name>Audio Quality</_name>
+          <name>Audio Quality</name>
           <control-type>slider</control-type>
           <min-value>0</min-value>
           <max-value>100</max-value>
-          <_min-label>Worst</_min-label>
-          <_max-label>Best</_max-label>
+          <min-label>Worst</min-label>
+          <max-label>Best</max-label>
           <step-value>1</step-value>
           <default-value>75</default-value>
         </variable>
