@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<its:rules xmlns:its="http://www.w3.org/2005/11/its"
+           version="2.0">
+  <its:translateRule selector="/Addin" translate="no"/>
+  <its:translateRule selector="/Addin/@name" translate="yes"/>
+  <its:translateRule selector="/Addin/@description" translate="yes"/>
+</its:rules>
