@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<locatingRules>
+  <locatingRule name="Audio Profile" pattern="*.xml">
+    <documentRule localName="audio-profiles" target="audioprofile.its"/>
+  </locatingRule>
+</locatingRules>
