@@ -1,7 +1,6 @@
 # List of source files containing translatable strings.
 # Please keep this file in alphabetical order; run ./sort-potfiles
 # after adding files here.
-[encoding: UTF-8]
 data/addin-xml-strings.cs
 data/audio-profiles/aac-novell.xml.in
 data/audio-profiles/base.xml.in
