@@ -3,8 +3,6 @@ TARGET = library
 LINK = $(REF_EXTENSION_MEDIAPANEL) $(LINK_EXTENSION_PLAYQUEUE_DEPS)
 INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
 
-@INTLTOOL_DESKTOP_RULE@
-
 SOURCES =  \
 	Banshee.MediaPanel/HeaderBox.cs \
 	Banshee.MediaPanel/MediaPanel.cs \
@@ -22,6 +20,9 @@ desktopfiles_in_files = banshee-media-panel.desktop.in
 desktopfiles_files = $(desktopfiles_in_files:.desktop.in=.desktop)
 desktopfilesdir = $(datadir)/applications
 desktopfiles_DATA = $(desktopfiles_files)
+
+%.desktop: %.desktop.in
+	$(AM_V_GEN)$(MSGFMT) --desktop --template $< -d $(top_srcdir)/po -o $@
 
 clean-local:
 	rm -f $(desktopfiles_files)
