@@ -1,3 +1,7 @@
+2017-07-15  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.19.8.1.
+
 2009-09-26  Timur Zhamakeev  <ztimur@gmail.com>
 
 	* ky.po:
